--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mainlogin</title>
-  <link rel="stylesheet" href="/stylesheets/mainloginpage.css">
+  <link rel="stylesheet" href="/stylesheets/register.css">
 </head>
 <body>
   <div class="container">
     <div class="content">
       <!--pinterest logo-->
       <img src="https://i.pinimg.com/originals/d3/d1/75/d3d175e560ae133f1ed5cd4ec173751a.png" alt="pin logo" class="img1" />
-      <p class="header">Log in to see more</p>
+      <p class="header">  <strong style="color: red;">Register </strong>to explore</p>
 <form action="/register" method="post"> 
       <input type="text" name="username" placeholder="Username" class="detail" ><br>
       <input type="email" name="email" placeholder="Email" class="detail" /><br />
@@ -44,10 +44,9 @@
           <b>Terms of Service, Privacy policy.</b>
         </p>
         <hr />
-        <p>Not on Pinterest yet? Sign up</p>
+        <p>Already on Pinterest yet?  <a href="/login">  Log In</a></p>
       </footer>
     </div>
   </div>
-<a href="" class="upbtn">Sign up</a>
 </body>
 </html>
