--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -9,9 +9,9 @@ body {
 
 #card {
   width: 95%;
-  height: 30%;
+  height: 12%;
   margin: 0;
-  padding: 10px 40px;
+  padding: 40px 40px 40px 40px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -21,18 +21,17 @@ body {
 }
 
 #avatar {
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 100px;
 }
 
 #info {
   width: 100%;
   height: 100%;
   margin: 0 15px;
-  display: flex;
-  flex-direction: column;
+  padding: 20px 2px;
 }
 
 #name {
@@ -57,6 +56,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  
 }
 
 .stats-text {
@@ -83,36 +83,76 @@ body {
   margin: 0 5px;
 }
 
+.cardf{
+    width: 95%;
+    height: 10%;
+    margin-top: 10px;
+   margin-bottom: 20px;
+    padding: 10px 40px;
+    background: #FFFFFF;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  }
+  .btnyy{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10% ;
+    padding: 20px 10px;
+
+  }
+
+#btnup{
+    border: 2px solid black;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    padding: 10px 80px; 
+    background: #39b109;
+    border-radius: 8px;
+    cursor: pointer;
+    text-decoration: none;
+    margin-right: 10px;
+  }
+  
 #btn {
+  border: 2px solid black;
   color: #FFFFFF;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
   text-align: center;
-  width: 30%;
-  margin: 2% 0% 30% 30%;
-  padding: 10px;
-  background: #0501f6;
+  padding: 10px 80px; 
+  background: #1212e2;
   border-radius: 8px;
   cursor: pointer;
+  text-decoration: none;
+  margin-right: 10px; 
 }
-
 
 #btn:hover {
   background: #2A26FF;
 }
-  
-   .profile-feed{
+
+
+
+.profile-feed{
     display: grid;
     place-items: center;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, "ＭＳ Ｐゴシック", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";;
   }
   
+
+.profile-grid{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+
+}
   .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    max-width: 100%;
-    column-gap: 1em;
-    padding: 2em;
+    max-width: 20%;
+    max-height:15%;
+    align-items: start;
   }
   
   .image-wrapper {
@@ -131,7 +171,7 @@ body {
   
   .column {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 3em;
   }
   
