--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="/stylesheets/profile.css">
+    <link rel="stylesheet" href="/stylesheets/upload.css">
    
 </head>
 
@@ -38,26 +39,46 @@
               <span>93</span>
               posts
             </p>
-          </div id= "btnf">
-          <p id="btn">Follow</p>
-        </div>
+      </div>
       </div>
       </div>
 
-      <div class="profile-grid"></div>
-      <div class="container">
-        <div class="column">
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
+<div class="cardf">
+
+<div class="btnyy">
+<div> <a id="btn" href="">Follow</a></div>
+<div >
+  <button id="btnup">Upload</button>
+</div>
+
+<!-- Modal for the form -->
+<div id="uploadModal" class="modal">
+  <div class="modal-content">
+      <span id="closeModal" class="close">&times;</span>
+      <form class="form" action="/upload" method="post" enctype="multipart/form-data">
+          <input type="file" name="file">
+          <input type="text" name="caption" placeholder="Caption">
+          <button type="submit">Submit</button>  
+      </form>
+  </div>
+</div>
+<div><a id="btn" href="/logout"> Logout</a></div>
+</div>
+</div>
+
+<div class="profile-grid">
+  <% user.posts.forEach(function(post) { %> 
+  <div class="container">
+      <div class="column">
+        <div class="content-wrapper">
+          <div class="image-wrapper">
+            <div class="overlay">
               <div>
                 <p>Creator</p>
                 <button class="save">Save</button>
               </div>
               <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
+                <button class="spheric-button"></button>
                 <button class="round-button">
                   <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
                 </button>
@@ -66,296 +87,15 @@
                 </button>
               </div>
             </div>
-               <img src="https://as2.ftcdn.net/v2/jpg/07/06/75/03/1000_F_706750322_BAtZdtytTNli3ZFF7lBK4HnsreSMNOfM.jpg" alt="">
-            </div>
-            <p>Pink flowers</p>
+            <!-- Render post image dynamically -->
+            <img src="./images/uploads/<%= post.image %> "alt="jpg">
           </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as2.ftcdn.net/v2/jpg/05/95/47/43/1000_F_595474370_igwu1vkskkROIyY1VbOCXwzSlbPtY4il.jpg" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as1.ftcdn.net/v2/jpg/07/10/16/16/1000_F_710161622_7KjUonoUZDVIbrQ2emFZRVYDdY7KV4ra.jpg" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-          
-        </div>
-        <div class="column">
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as1.ftcdn.net/v2/jpg/06/88/54/74/1000_F_688547407_pJ5whuF2GZRIa6AWRAz9W9CoVwIKkNj2.jpg" alt="">
-            </div>
-            <p>Pink flowers</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as2.ftcdn.net/v2/jpg/06/70/93/51/1000_F_670935177_ET4BZEMbCG8L9nFhW3a27rTQwGGGvWeZ.jpg" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as2.ftcdn.net/v2/jpg/07/17/21/01/1000_F_717210102_uEBnGU7YR1NAdhIAKlWbZLXydetZI76T.jpg" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-        </div>
-        <div class="column">
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as1.ftcdn.net/v2/jpg/06/92/90/18/1000_F_692901885_qWxRVNi5EkcqBR7qRKRdcmcuYokYQTyq.jpg" alt="">
-            </div>
-            <p>Pink flowers</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as1.ftcdn.net/v2/jpg/06/00/82/42/1000_F_600824298_0b2vE4zgJbHR20cNyCgtknOBtCu4MDb7.jpg" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://as2.ftcdn.net/v2/jpg/06/81/42/31/1000_F_681423107_sRcBrmBWNUdkOe0y88DjagXNoelg9iJx.jpg" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-        </div>
-        <div class="column">
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://images.pexels.com/photos/60909/rose-yellow-flower-petals-60909.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://images.pexels.com/photos/4121204/pexels-photo-4121204.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://images.pexels.com/photos/4122767/pexels-photo-4122767.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
-          <div class="content-wrapper">
-            <div class="image-wrapper">
-              <div class="overlay">
-              <div>
-                <p>Creator</p>
-                <button class="save">Save</button>
-              </div>
-              <div>
-                <button class="spheric-button">
-                  twitter.com
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/3580/3580382.png" alt="">
-                </button>
-                <button class="round-button">
-                  <img src="https://cdn-icons-png.flaticon.com/512/512/512142.png" alt="">
-                </button>
-              </div>
-            </div>
-               <img src="https://images.pexels.com/photos/2626152/pexels-photo-2626152.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-            </div>
-            <p>Cool image</p>
-          </div>
+          <!-- Render post caption dynamically -->
+          <p><%= post.caption %></p>
         </div>
       </div>
     </div>
-     
-</body>
-</html>
+    <% }); %>  <!-- End of loop -->
+  </div>
+  <script src="/javascripts/upload.js"></script>
+  </body>
